--- a/css/inicio.css
+++ b/css/inicio.css
@@ -361,7 +361,7 @@ footer{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    margin-top: 20px;
 }
 
 .footer-up h3{
@@ -379,8 +379,8 @@ footer{
     display: flex;
     justify-content: space-around;
     align-items: center;
-   
-    height: 300px;
+    height: 200px;
+
 }
 
 .footer-main .div-line{
@@ -425,4 +425,22 @@ footer{
 .icon-footer{
     width: 40px;
     margin: 20px;
+}
+.footer-bottom{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: var(--text_one);
+   
+}
+.footer-bottom .bottom-line{
+    width: 100%;
+    height: 1px;
+    border: solid 1px var(--text_one);
+    border-bottom: solid 1px var(--text_one);
+}
+.footer-bottom p{
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
