--- a/css/perfil.css
+++ b/css/perfil.css
@@ -4,7 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    
+    color: var(--text_one);
 }
 /*cores*/
 :root{
@@ -21,7 +21,7 @@
     --text_two:#bdbdbd;
 }
 .section-2{
-    margin-bottom: 100px;
+    margin-bottom: 50px;
     box-shadow: 2px 2px 20px black;
 }
 /*botão de voltar*/
@@ -73,7 +73,7 @@ main{
     width: 200px;
     height: 200px;
     bottom: -20px;
-    background-image:url("./img-background/JuninGamePrayPicaDasGalaxias.svg") ; /*colocar imagem aqui >>>>>>>>>>>>>>>>>>*/
+    background-image:url("./img-background/icone_1.svg") ; /*colocar imagem aqui >>>>>>>>>>>>>>>>>>*/
     background-size: cover;
 } 
 
@@ -81,8 +81,9 @@ main{
 /*----section 2----*/
 .section-2{
     width: 100%;
-    background-color: #bdbdbd;
+    background-color: var(--main_two);
     padding: 30px 0px 0px 0px;
+    border-radius: 10px;
 }
 
 /* cima section 2*/
@@ -135,9 +136,10 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: solid 2px;
+    border: solid 2px var(--text_one);
     border-radius: 20px;
     width: 90%;
+    
 }
 .quests .quests-profire{
     display: flex;
@@ -153,37 +155,74 @@ main{
     align-items: center;
     gap: 2px;
 }
+
 .quest img{
     border: solid black;
     border-radius: 100%;
-    width: 120px;
-    height: 120px;
+    width: 7.5em;
+    height: 7.5em;
 }
 
+.quest img:hover{
+  transform: scale(1.1) ;
+  border: solid var(--text_two);
+}
+.quest img:active{
+  transform: scale(0.9) ;
+  border: solid var(--text_two);
+}
 
 /*baixo sectio 2*/
 .sec2-bottom{
     display: flex;
-    
     align-items: center;
     justify-content: space-around;
-    margin-top: 10%;
+    margin-top: 5%;
+    margin-bottom: 3%;
     height: 200px;
-    background-color: #c8c8c8;
+   
 }
 .form-right{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
     height: 100%;
     width: 100%;
-    background-color: #bdbdbd;
-    
 }
+.form-right h3{
+  color: var(--text_one);
+  font-size: 24px;
+}
+.form-right label{
+  color: var(--text_one);
+  font-size: 20px;
+}
+.form-right span{
+  color: var(--text_two);
+  font-size: 20px;
+  
+}
+
+
 .contact-profire form, .contact-profire form label {
     padding: 20px;
+   
+}
+
+.form-right .contact-socialMedia{
+  width:100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+.contact-socialMedia a:hover {
+  transform: scale(1.1);
+}
+
+.contact-socialMedia a:active{
+  transform: scale(0.9);
 }
 
 
