--- a/css/vagas.css
+++ b/css/vagas.css
@@ -66,71 +66,110 @@ text-align: center;
 
 
 /*#region CODIGO DE TINDER DE TERCEIROS*/
-/*
-html, body {
+
+.section-tinder{
+  height: 600px;
   margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-}
-
-input[type=radio] {
-  display: none;
-}
-
-.card {
-  position: absolute;
-  width: 60%;
-  height: 100%;
-  left: 0;
-  right: 0;
-  margin: auto;
-  transition: transform .4s ease;
-  cursor: pointer;
-
-}
-
-.tinder-carousel {
-  width: 100%;
-  max-width: 800px;
-  max-height: 400px;
-  height: 100%;
-  transform-style: preserve-3d;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 500px 100px;
+  grid-template-columns: 1fr 30px 30px 30px 1fr;
   align-items: center;
+  justify-items: center;
 }
 
-.cards {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  margin-bottom: 20px;
-
+main#carousel {
+  grid-row: 1 / 2;
+  grid-column: 1 / 8;
+  width: 100vw;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  transform-style: preserve-3d;
+  perspective: 200px;
+  --items: 3;
+  --middle: 3;
+  --position: 1;
+  pointer-events: none;
 }
 
-#item-1:checked ~ .cards #song-3, #item-2:checked ~ .cards #song-1, #item-3:checked ~ .cards #song-2 {
-  transform: translatex(-40%) scale(.8);
-  opacity: .4;
-  z-index: 0;
-
+div.item {
+  position: absolute;
+  width: 300px;
+  height: 400px;
+  background-color: coral;
+  --r: calc(var(--position) - var(--offset));
+  --abs: max(calc(var(--r) * -1), var(--r));
+  transition: all 0.25s linear;
+  transform: rotateY(calc(-10deg * var(--r)))
+  translateX(calc(-300px * var(--r)));
+  z-index: calc((var(--position) - var(--abs)));
 }
 
-#item-1:checked ~ .cards #song-2, #item-2:checked ~ .cards #song-3, #item-3:checked ~ .cards #song-1 {
-  transform: translatex(40%) scale(.8);
-  opacity: .4;
-  z-index: 0;
-  box-shadow: 0px 0px 5px 0px rgba(81, 81, 81, 0.47);
+div.item:nth-of-type(1) {
+  --offset: 1;
+  background-color: #90f1ef;
+}
+div.item:nth-of-type(2) {
+  --offset: 2;
+  background-color: #ff70a6;
+}
+div.item:nth-of-type(3) {
+  --offset: 3;
+  background-color: #ff9770;
 }
 
-#item-1:checked ~ .cards #song-1, #item-2:checked ~ .cards #song-2, #item-3:checked ~ .cards #song-3 {
-  transform: translatex(0) scale(1);
-  opacity: 1;
-  z-index: 1;
-  box-shadow: 0px 0px 5px 0px rgba(81, 81, 81, 0.47);
+input:nth-of-type(1) {
+  display: none;
+  /* grid-column: 2 / 3;
+  grid-row: 2 / 3; */
 }
-/*
+input:nth-of-type(1):checked ~ main#carousel {
+  --position: 1;
+}
+
+input:nth-of-type(2) {
+  display: none;
+  /* grid-column: 3 / 4;
+  grid-row: 2 / 3; */
+}
+input:nth-of-type(2):checked ~ main#carousel {
+  --position: 2;
+}
+
+input:nth-of-type(3) {
+  display: none;
+  /* grid-column: 4 /5;
+  grid-row: 2 / 3; */
+}
+input:nth-of-type(3):checked ~ main#carousel {
+  --position: 3;
+}
+
+.carousel-button{
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+  background-color: #790034;
+  width: 19em;
+  height: 50px;
+  border-radius: 10px;
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+}
+.carousel-button button{
+  border: none;
+  background-color: transparent;
+}
+
+.carousel-button button:hover{
+  transform: scale(1.1);
+}
+.carousel-button button:active{
+  transform: scale(0.9);
+
+}
 /*#endregion*/
 
 
