--- a/css/chatbot.css
+++ b/css/chatbot.css
@@ -106,12 +106,9 @@ body.show-chatbot .chatbot-popup {
 }
 
 .header-info .chatbot-logo {
-    height: 35px;
-    width: 35px;
-    fill: var(--main_one);
+    height: 50x;
+    width: 50px;
     flex-shrink: 0;
-    padding: 6px;
-    background-color: #fff;
     border-radius: 50%;
 }
 
@@ -161,12 +158,9 @@ body.show-chatbot .chatbot-popup {
 .chat-body .bot-message .bot-avatar {
     height: 35px;
     width: 35px;
-    fill: #fff;
     flex-shrink: 0;
     align-self: flex-end;
     margin-top: 2px;
-    padding: 6px;
-    background-color: var(--main_one);
     border-radius: 50%;
 }
 
