--- a/css/vagas.css
+++ b/css/vagas.css
@@ -80,7 +80,7 @@ text-align: center;
 main#carousel {
   grid-row: 1 / 2;
   grid-column: 1 / 8;
-  width: 100vw;
+  width: 100%;
   height: 500px;
   display: flex;
   align-items: center;
@@ -88,8 +88,8 @@ main#carousel {
   overflow: hidden;
   transform-style: preserve-3d;
   perspective: 200px;
-  --items: 3;
-  --middle: 3;
+  --items: 4;
+  --middle: 4;
   --position: 1;
   pointer-events: none;
 }
@@ -98,10 +98,10 @@ div.item {
   position: absolute;
   width: 300px;
   height: 400px;
-  background-color: coral;
+
   --r: calc(var(--position) - var(--offset));
   --abs: max(calc(var(--r) * -1), var(--r));
-  transition: all 0.25s linear;
+  transition: transform 0.25s ease-in-out;
   transform: rotateY(calc(-10deg * var(--r)))
   translateX(calc(-300px * var(--r)));
   z-index: calc((var(--position) - var(--abs)));
@@ -119,11 +119,14 @@ div.item:nth-of-type(3) {
   --offset: 3;
   background-color: #ff9770;
 }
+div.item:nth-of-type(4) {
+  --offset: 4;
+  background-color: #b6f56a;
+}
 
 input:nth-of-type(1) {
   display: none;
-  /* grid-column: 2 / 3;
-  grid-row: 2 / 3; */
+
 }
 input:nth-of-type(1):checked ~ main#carousel {
   --position: 1;
@@ -131,8 +134,7 @@ input:nth-of-type(1):checked ~ main#carousel {
 
 input:nth-of-type(2) {
   display: none;
-  /* grid-column: 3 / 4;
-  grid-row: 2 / 3; */
+ 
 }
 input:nth-of-type(2):checked ~ main#carousel {
   --position: 2;
@@ -140,13 +142,19 @@ input:nth-of-type(2):checked ~ main#carousel {
 
 input:nth-of-type(3) {
   display: none;
-  /* grid-column: 4 /5;
-  grid-row: 2 / 3; */
+
 }
 input:nth-of-type(3):checked ~ main#carousel {
   --position: 3;
 }
 
+input:nth-of-type(4) {
+  display: none;
+
+}
+input:nth-of-type(4):checked ~ main#carousel {
+  --position: 4;
+}
 .carousel-button{
   display: flex;
   justify-content:space-between;
