--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -28,7 +28,20 @@ body {
     color: #ffffff;
 }
 
+/*botão de voltar*/
+.return{
+    position: absolute;
+    left: 40px;
+    top: 30px;
+}
 
+.return img:hover {
+    transform: scale(1.1);
+}
+.return  img:active{
+    transform:scale(0.9);
+    filter: brightness(0) saturate(100%) invert(7%) sepia(91%) saturate(6405%) hue-rotate(328deg) brightness(106%) contrast(100%);
+}
 
 .input-terms label {
     margin-left: 8px;  /* Espaço entre a caixa de seleção e o texto */
@@ -70,7 +83,7 @@ main {
 .section-left h1 span::before{
     content: "";
     color: var(--text_one);
-    animation: key_not 8s 1 forwards;
+    animation: key_not 10.2s 1 forwards;
 }
 .section-left h1 span::after{
     content: "";
@@ -78,34 +91,31 @@ main {
     position: absolute;
     height: 100%;
     right: -10px;
-    animation: key_cursor .6s infinite, key_del 10s steps(15) 1 forwards;
+    animation: key_cursor .5s infinite, key_del 8s steps(15) 1 forwards;
     width: calc(100% + 10px);
     background-color: var(--background_color);
 }
 @keyframes key_del {
-    5%,20%,25%,40%,45%,60%,65%{
-        width: calc(100% + 10px);
+    0%, 33%, 66% {
+        width: calc(100% + 10px); 
     }
-    10%,15%,30%,35%,50%,55%,70%,75%{
-        width: 0;
+    10%, 25%, 40%, 55%, 70% {
+        width: 0; 
     }
-    95%,100%{
-        width: 0;
+    95%, 100% {
+        width: 0; 
     }
 }
 @keyframes key_not {
-    0%,25%{
+    0%, 33% {
         content: "ização";
     }
-    26%,50%{
-        content:"izado";
+    34%, 66% {
+        content: "izar";
     }
-    51%,75%{
-        content:"izar"
-    }
-    76%,100%{
-        content:"ize-se"
-    }  
+    67%, 100% {
+        content: "ize-se";
+    } 
 }
 @keyframes key_cursor {
     0%{
@@ -190,9 +200,9 @@ main {
     width: 150px; 
     margin-right: 10px; 
 }
-.table-center input {
+.table-center .form-input {
     width: 100%;
-    max-width: 500px; 
+    height: 34px;
     padding: 0px 15px 0px 15px; 
 
 }
@@ -232,33 +242,46 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
+
 }
-.input-terms{
+.terms .input-terms{
     display: flex;
     justify-content: center;
+    align-items: center;
     margin: 5px; 
+   
 }
-.input-terms input {
+.terms .input-terms input {
     width: 20px;
     max-width: 30px; 
     padding: 0px 15px 0px 15px; 
     margin-left: 10%;
 
 }
-.input-terms label {
+.terms .input-terms a  {
+    display: flex;
+    align-items: center;
     text-align: left;
     margin-right: 10px; 
-    width: 50%;
+    margin-left: 10px;
+    width: 60%;
+    color: var(--text_one);
+}
+
+.terms .input-terms a:active {
+    /* margin-top: 15px; */
+    color: var(--main_one);
 }
 
 
 /* Link para cadastro */
 .table-down a {
     display: block;
-    margin-top: 15px;
+    /* margin-top: 15px; */
     font-size: 0.9rem;
     color: var(--main_one);
     text-decoration: none;
+    
 }
 
 .table-down a:hover {
