--- a/css/inicio.css
+++ b/css/inicio.css
@@ -30,6 +30,19 @@ body{
     background-color: var(--main_one);
 }
 
+.returnTop{
+    position:  fixed;
+    z-index: 2;
+    bottom: 0;
+    right: 47%;
+    background-color: #ffffff1c;
+    opacity: 1000px;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    border-radius: 10px 10px 0px 0px;
+}
+
 .section-1,.section-2,.section-3{
     height: 100vh;
     animation: key-visible linear;
@@ -325,13 +338,14 @@ body{
 
 /*sec3 baixo*/
 .sec3-bottom{
+
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 50px;
     /* border: solid 1px black;
     border-radius: 20px 20px 20px 20px; */
-    transform:scale(1.8);
+    transform:scale(1.3);
 }
 
 .sec3-bottom a{
