--- a/css/perfil.css
+++ b/css/perfil.css
@@ -62,7 +62,7 @@ main{
     display: flex;
     width: 100%;
     height: 300px;
-    background-color: rgb(189, 199, 199);
+    background-image:url("./img-background/banner.svg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
