--- a/css/vagas.css
+++ b/css/vagas.css
@@ -101,7 +101,7 @@ div.item {
 
   --r: calc(var(--position) - var(--offset));
   --abs: max(calc(var(--r) * -1), var(--r));
-  transition: transform 0.25s ease-in-out;
+   transition: transform 0.25s ease-in-out; 
   transform: rotateY(calc(-10deg * var(--r)))
   translateX(calc(-300px * var(--r)));
   z-index: calc((var(--position) - var(--abs)));
@@ -111,7 +111,7 @@ div.item:nth-of-type(1) {
   --offset: 1;
   background-color: #90f1ef;
 }
-div.item:nth-of-type(2) {
+ div.item:nth-of-type(2) {
   --offset: 2;
   background-color: #ff70a6;
 }
@@ -119,42 +119,23 @@ div.item:nth-of-type(3) {
   --offset: 3;
   background-color: #ff9770;
 }
-div.item:nth-of-type(4) {
-  --offset: 4;
-  background-color: #b6f56a;
-}
 
-input:nth-of-type(1) {
+input[type="radio"]{
   display: none;
+} 
 
-}
 input:nth-of-type(1):checked ~ main#carousel {
   --position: 1;
-}
-
-input:nth-of-type(2) {
-  display: none;
- 
 }
 input:nth-of-type(2):checked ~ main#carousel {
   --position: 2;
 }
-
-input:nth-of-type(3) {
-  display: none;
-
-}
-input:nth-of-type(3):checked ~ main#carousel {
+ input:nth-of-type(3):checked ~ main#carousel {
   --position: 3;
 }
 
-input:nth-of-type(4) {
-  display: none;
 
-}
-input:nth-of-type(4):checked ~ main#carousel {
-  --position: 4;
-}
+
 .carousel-button{
   display: flex;
   justify-content:space-between;
