--- a/css/vagas.css
+++ b/css/vagas.css
@@ -80,7 +80,7 @@ text-align: center;
 main#carousel {
   grid-row: 1 / 2;
   grid-column: 1 / 8;
-  width: 100%;
+  width: 45%;
   height: 500px;
   display: flex;
   align-items: center;
@@ -88,36 +88,38 @@ main#carousel {
   overflow: hidden;
   transform-style: preserve-3d;
   perspective: 200px;
-  --items: 4;
-  --middle: 4;
+  --items: 1000;
+  --middle: 1;
   --position: 1;
   pointer-events: none;
+  
 }
 
 div.item {
   position: absolute;
-  width: 300px;
+  width: 800px;
   height: 400px;
-
+  
   --r: calc(var(--position) - var(--offset));
   --abs: max(calc(var(--r) * -1), var(--r));
    transition: transform 0.25s ease-in-out; 
-  transform: rotateY(calc(-10deg * var(--r)))
-  translateX(calc(-300px * var(--r)));
+  transform: rotateY(calc(-0.9deg * var(--r))) translateX(calc(-300px * var(--r) ));
   z-index: calc((var(--position) - var(--abs)));
+  box-shadow: 0px 0px 20px var(--background_color);
 }
 
 div.item:nth-of-type(1) {
   --offset: 1;
-  background-color: #90f1ef;
+  background-color: var(--main_one);
 }
  div.item:nth-of-type(2) {
   --offset: 2;
-  background-color: #ff70a6;
+  background-color: var(--main_one);
+  
 }
 div.item:nth-of-type(3) {
   --offset: 3;
-  background-color: #ff9770;
+  background-color: var(--main_one);
 }
 
 input[type="radio"]{
@@ -134,6 +136,13 @@ input:nth-of-type(2):checked ~ main#carousel {
   --position: 3;
 }
 
+input:nth-of-type(4):checked ~ main#carousel {
+  --position: 4;
+}
+
+input:nth-of-type(5):checked ~ main#carousel {
+  --position: 5;
+}
 
 
 .carousel-button{
