--- a/css/vagas.css
+++ b/css/vagas.css
@@ -80,7 +80,7 @@ text-align: center;
 main#carousel {
   grid-row: 1 / 2;
   grid-column: 1 / 8;
-  width: 45%;
+  width: 900px;
   height: 500px;
   display: flex;
   align-items: center;
@@ -99,13 +99,20 @@ div.item {
   position: absolute;
   width: 800px;
   height: 400px;
-  
+  box-shadow: 0px 0px 20px var(--background_color);
+  border-radius: 10px;
+
+
+
+
+
+
   --r: calc(var(--position) - var(--offset));
   --abs: max(calc(var(--r) * -1), var(--r));
    transition: transform 0.25s ease-in-out; 
   transform: rotateY(calc(-0.9deg * var(--r))) translateX(calc(-300px * var(--r) ));
   z-index: calc((var(--position) - var(--abs)));
-  box-shadow: 0px 0px 20px var(--background_color);
+  
 }
 
 div.item:nth-of-type(1) {
@@ -114,12 +121,12 @@ div.item:nth-of-type(1) {
 }
  div.item:nth-of-type(2) {
   --offset: 2;
-  background-color: var(--main_one);
+  background-color: var(--text_two);
   
 }
 div.item:nth-of-type(3) {
   --offset: 3;
-  background-color: var(--main_one);
+  background-color: var(--text_two);
 }
 
 input[type="radio"]{
