--- a/css/vagas.css
+++ b/css/vagas.css
@@ -205,21 +205,42 @@ input:nth-of-type(5):checked ~ main#carousel {
   flex-direction: column;
   align-items: center;
 }
-.vaga {
+
+.container-vaga .vaga {
   margin: 20px auto 0px auto;
   max-width: 980px;
   width: 100%;
   background-color: rgb(255, 255, 255);
   border-radius: 10px;
   padding: 20px;
+  cursor: pointer;
+  box-shadow: 10px 10px 10px var(--background_color);
+  border:solid var(--background_color);
 }
-.vaga:hover + span{
+.container-vaga .vaga:hover{
+  border:solid var(--main_two);
+}
+.container-vaga .vaga:hover + span{
   display: block;
+  animation: KdropDown 0.1s;
+
+
+}
+@keyframes KdropDown {
+  from{
+    transform: translateY(-5px);
+    opacity: 0.7;
+    z-index: -1;
+  }
+  to{
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
 .container-vaga span{
   display: none;
-  margin: 2px 0px 0px 0px ;
+  margin: 1px 0px 0px 0px ;
   background-color: #ffffff;
   width: 150px;
   border-radius: 0 0px 10px 10px;
@@ -228,6 +249,7 @@ input:nth-of-type(5):checked ~ main#carousel {
 .header-vaga {
   display: flex;
   justify-content: space-between;
+ 
 }
 
 .body-vaga {
@@ -239,11 +261,37 @@ input:nth-of-type(5):checked ~ main#carousel {
 }
 
 
+
 .footer-vaga {
   margin: 10px 5px 0px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;       
+}
+
+
+.footer-vaga a {
+  width: 20%;
+  padding: 12px;
+  font-size: 1.4rem;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  color: #ffffff;
+  background-color: var(--main_one);
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  text-align: center;
+  box-shadow: 5px 5px 10px rgb(163, 163, 163);
+  text-decoration: none;
+}
+
+.footer-vaga a:hover {
+  background-color: var(--main_two);
+}
+.footer-vaga a:active{
+  transform: scale(0.9);
 }
 
 .footer-vaga p {
