--- a/css/vagas.css
+++ b/css/vagas.css
@@ -210,27 +210,36 @@ input:nth-of-type(5):checked ~ main#carousel {
   margin: 20px auto 0px auto;
   max-width: 980px;
   width: 100%;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--text_one);
   border-radius: 10px;
   padding: 20px;
   cursor: pointer;
-  box-shadow: 10px 10px 10px var(--background_color);
-  border:solid var(--background_color);
+  transition: 0.2s;
 }
-.container-vaga .vaga:hover{
-  border:solid var(--main_two);
+
+.container-vaga .vaga:focus .body-vaga p{
+  position: relative;
+  white-space:normal;
+  display: -webkit-box;        
+  -webkit-line-clamp: none;      
+  -webkit-box-orient: vertical;  
+  overflow: hidden;
 }
-.container-vaga .vaga:hover + span{
-  display: block;
+
+.container-vaga .vaga:focus {
+  outline: none; /* Remove o contorno quando o foco é aplicado */
+}
+
+
+/* .container-vaga .vaga:hover + span{
+  opacity: 1;
   animation: KdropDown 0.1s;
-
-
-}
+  
+} */
 @keyframes KdropDown {
   from{
-    transform: translateY(-5px);
+    transform: translateY(-1px);
     opacity: 0.7;
-    z-index: -1;
   }
   to{
     transform: translateY(0);
@@ -239,13 +248,21 @@ input:nth-of-type(5):checked ~ main#carousel {
 }
 
 .container-vaga span{
-  display: none;
-  margin: 1px 0px 0px 0px ;
+  opacity: 0;
+  margin: 0px 0px 0px 0px ;
   background-color: #ffffff;
-  width: 150px;
-  border-radius: 0 0px 10px 10px;
+  width: 170px;
+  height: 35px;
+  border-radius: 0 0px 15px 15px;
   text-align: center;
+  cursor: pointer;
 }
+.container-vaga span:hover{
+  opacity: 1;
+
+  
+}
+
 .header-vaga {
   display: flex;
   justify-content: space-between;
@@ -259,8 +276,6 @@ input:nth-of-type(5):checked ~ main#carousel {
   box-shadow: inset -5px -5px 5px 0px rgba(90, 90, 90, 0.25);
 
 }
-
-
 
 .footer-vaga {
   margin: 10px 5px 0px;
@@ -276,7 +291,7 @@ input:nth-of-type(5):checked ~ main#carousel {
   font-size: 1.4rem;
   margin-top: 10px;
   margin-bottom: 5px;
-  color: #ffffff;
+  color: var(--text_one);
   background-color: var(--main_one);
   border: none;
   border-radius: 10px;
@@ -296,4 +311,13 @@ input:nth-of-type(5):checked ~ main#carousel {
 
 .footer-vaga p {
   margin: 0;
+}
+
+.body-vaga p {
+  position: relative;
+  white-space:normal;
+  display: -webkit-box;        
+  -webkit-line-clamp: 2;      
+  -webkit-box-orient: vertical;  
+  overflow: hidden;       
 }
