--- a/css/perfil.css
+++ b/css/perfil.css
@@ -22,6 +22,7 @@
 }
 body{
   background-color: var(--background_color);
+  
 }
 .section-2{
     margin-bottom: 50px;
@@ -45,9 +46,9 @@ body{
 main{
     display: flex;
     background-color: var(--background_color);
-  
     justify-content: center;
     align-items: center;
+    margin-bottom: 10%;
 }
 .div-main{
     display: flex;
@@ -172,6 +173,9 @@ main{
     border-radius: 100%;
     width: 7.5em;
     height: 7.5em;
+    background-repeat: no-repeat;
+    background-position: center;
+    object-fit: cover;
 }
 
 .quest img:hover{
@@ -576,4 +580,116 @@ main{
   border-radius: 10px;
   height: 40px;
   z-index: 3;
+}
+
+/*-----Footer bonitão igual o Gabriel henrique-----*/
+footer{
+  display: flex;
+  flex-direction: column;
+  /* height: 100%; */
+  background-color: var(--main_one);
+}
+
+.footer-shadow{
+  width: 100%;
+  height: 50px;
+  border-radius: 0px 0px 30px 30px;
+  background-color: var(--background_color);
+  box-shadow: 0px 10px 10px #0505186b;
+}
+
+/*titulo do footer*/
+.footer-up{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.footer-up h3{
+  color: #FFF;
+  font-family: "Inknut Antiqua";
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+
+/*centro do footer*/
+.footer-main{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 200px;
+
+}
+
+.footer-main .div-line{
+  height: 100px;
+  background-color: #131335;
+  border-left: 3px solid  var(--text_one);
+}
+
+.footer-main a{
+  text-decoration: none;
+  color: var(--text_one);
+}
+
+.footer-left, .footer-right{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 25%;
+  gap: 10px;
+  text-align: left;
+}
+
+
+.footer-center{
+  display: flex;
+  flex-direction: flex;
+  width: 30%;
+  justify-content: space-around;
+  align-items: center;
+  width: 80%;
+  gap: 20px;
+}
+.footer-center a:hover {
+  transform: scale(1.1);
+}
+.footer-center a:active {
+  transform: scale(0.9);
+}
+
+.footerC-instagram,.footerC-linkedin,.footerC-github{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+
+}
+.icon-footer{
+  width: 40px;
+  margin: 20px;
+}
+.footer-bottom{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: var(--text_one);
+ 
+}
+.footer-bottom .bottom-line{
+  width: 100%;
+  height: 1px;
+  border: solid 1px var(--text_one);
+  border-bottom: solid 1px var(--text_one);
+}
+.footer-bottom p{
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
