--- a/css/vagas.css
+++ b/css/vagas.css
@@ -11,6 +11,7 @@
 }
 body{
   background-color: var(--second_color)/* rgb(112, 83, 135)*/;
+  height: 100vh;
 }
 /*-----CABEÇA------*/
 
@@ -226,23 +227,24 @@ input:nth-of-type(5):checked ~ main#carousel {
   overflow: hidden;
 }
 
+
 .container-vaga .vaga:focus {
   outline: none; /* Remove o contorno quando o foco é aplicado */
 }
 
 
-/* .container-vaga .vaga:hover + span{
+.container-vaga .vaga:hover + span{
   opacity: 1;
   animation: KdropDown 0.1s;
   
-} */
+} 
 @keyframes KdropDown {
   from{
-    transform: translateY(-1px);
+ 
     opacity: 0.7;
   }
   to{
-    transform: translateY(0);
+ 
     opacity: 1;
   }
 }
@@ -259,9 +261,8 @@ input:nth-of-type(5):checked ~ main#carousel {
 }
 .container-vaga span:hover{
   opacity: 1;
-
-  
 }
+
 
 .header-vaga {
   display: flex;
@@ -317,7 +318,119 @@ input:nth-of-type(5):checked ~ main#carousel {
   position: relative;
   white-space:normal;
   display: -webkit-box;        
-  -webkit-line-clamp: 2;      
+  -webkit-line-clamp: 3;      
   -webkit-box-orient: vertical;  
   overflow: hidden;       
+}
+
+/*-----Footer bonitão igual o Gabriel henrique-----*/
+footer{
+  display: flex;
+  flex-direction: column;
+  /* height: 100%; */
+  background-color: var(--main_one);
+}
+
+.footer-shadow{
+  width: 100%;
+  height: 50px;
+  border-radius: 0px 0px 30px 30px;
+  background-color: var(--second_color);
+  box-shadow: 0px 10px 10px #0505186b;
+}
+
+/*titulo do footer*/
+.footer-up{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.footer-up h3{
+  color: #FFF;
+  font-family: "Inknut Antiqua";
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+
+/*centro do footer*/
+.footer-main{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 200px;
+
+}
+
+.footer-main .div-line{
+  height: 100px;
+  background-color: #131335;
+  border-left: 3px solid  var(--text_one);
+}
+
+.footer-main a{
+  text-decoration: none;
+  color: var(--text_one);
+}
+
+.footer-left, .footer-right{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 25%;
+  gap: 10px;
+  text-align: left;
+}
+
+
+.footer-center{
+  display: flex;
+  flex-direction: flex;
+  width: 30%;
+  justify-content: space-around;
+  align-items: center;
+  width: 80%;
+  gap: 20px;
+}
+.footer-center a:hover {
+  transform: scale(1.1);
+}
+.footer-center a:active {
+  transform: scale(0.9);
+}
+
+.footerC-instagram,.footerC-linkedin,.footerC-github{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+
+}
+.icon-footer{
+  width: 40px;
+  margin: 20px;
+}
+.footer-bottom{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: var(--text_one);
+ 
+}
+.footer-bottom .bottom-line{
+  width: 100%;
+  height: 1px;
+  border: solid 1px var(--text_one);
+  border-bottom: solid 1px var(--text_one);
+}
+.footer-bottom p{
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
