--- a/css/vagas.css
+++ b/css/vagas.css
@@ -102,7 +102,7 @@ div.item {
   height: 400px;
   box-shadow: 0px 0px 20px var(--background_color);
   border-radius: 10px;
-
+  pointer-events: auto;
   --r: calc(var(--position) - var(--offset));
   --abs: max(calc(var(--r) * -1), var(--r));
    transition: transform 0.25s ease-in-out; 
@@ -117,12 +117,12 @@ div.item:nth-of-type(1) {
 }
  div.item:nth-of-type(2) {
   --offset: 2;
-  background-color: var(--text_two);
+  background-color: var(--text_one);
   
 }
 div.item:nth-of-type(3) {
   --offset: 3;
-  background-color: var(--text_two);
+  background-color: var(--text_one);
 }
 
 input[type="radio"]{
@@ -286,8 +286,8 @@ input:nth-of-type(5):checked ~ main#carousel {
 }
 
 
-.footer-vaga a {
-  width: 20%;
+.footer-vaga a,.left-vaga a {
+  width: 200px;
   padding: 12px;
   font-size: 1.4rem;
   margin-top: 10px;
@@ -299,14 +299,14 @@ input:nth-of-type(5):checked ~ main#carousel {
   cursor: pointer;
   transition: background-color 0.3s ease;
   text-align: center;
-  box-shadow: 5px 5px 10px rgb(163, 163, 163);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.224);
   text-decoration: none;
 }
 
-.footer-vaga a:hover {
+.footer-vaga a:hover, .left-vaga a:hover {
   background-color: var(--main_two);
 }
-.footer-vaga a:active{
+.footer-vaga a:active,.left-vaga a:active{
   transform: scale(0.9);
 }
 
@@ -321,6 +321,42 @@ input:nth-of-type(5):checked ~ main#carousel {
   -webkit-line-clamp: 3;      
   -webkit-box-orient: vertical;  
   overflow: hidden;       
+}
+
+
+/*CARROSEL vaga*/
+.carrossel-container{
+  display: flex;
+  justify-content: center;
+  /* background-color: aquamarine; */
+  width: 100%;
+  height: 25em;
+}
+.left-vaga{
+  /* background-color: rgb(182, 108, 108); */
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.right-vaga{
+  /* background-color: rgb(127, 127, 216); */
+  width: 50%;
+}
+
+
+.carrosel-text{
+  background-color: var(--text_one);
+  margin: 20px;
+  overflow-y: scroll;
+  width: 23em;
+  height: 23em;
+  position: relative;
+  padding: 15px;
+  box-shadow: inset 0px 0px 5px 0px rgba(90, 90, 90, 0.501);
 }
 
 /*-----Footer bonitão igual o Gabriel henrique-----*/
