--- a/css/perfil.css
+++ b/css/perfil.css
@@ -33,7 +33,8 @@ body{
 .return{
     position: fixed;
     left: 40px;
-    top: 30px;
+    top: 15px;
+    z-index: 3;
 }
 
 .return img:hover {
@@ -43,12 +44,82 @@ body{
     transform:scale(0.9);
     filter: brightness(0) saturate(100%) invert(7%) sepia(91%) saturate(6405%) hue-rotate(328deg) brightness(106%) contrast(100%);
 }
+
+/*navbar*/
+.navbar-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 13px;
+  left: 0;
+  width: 100%;
+  z-index:2; 
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.1); 
+  padding: 10px 0;
+  border-bottom: 3px solid #790034;
+  width: 50%; 
+  border-radius: 30px; 
+}
+
+.navbar-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  
+}
+
+.navbar-links {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: var(--text_one);
+  font-size: 16px;
+  padding: 5px 10px;
+  transition: all 0.1s ease-in-out;
+  text-align: center;
+}
+
+.nav-link:hover,
+.nav-link:focus {
+  color: var(--text_two);
+  border: 2px solid var(--text_two);
+  border-radius: 5px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-link.active {
+  color: var(--text_two);
+  border-bottom: 2px solid var(--text_two);
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/*---------PRINCIPAL---------*/
 main{
     display: flex;
     background-color: var(--background_color);
     justify-content: center;
     align-items: center;
     margin-bottom: 10%;
+    margin-top: 56px;
 }
 .div-main{
     display: flex;
