--- a/css/vagas.css
+++ b/css/vagas.css
@@ -10,58 +10,88 @@
   --text_two:#bdbdbd;
 }
 body{
-  background-color: var(--second_color)/* rgb(112, 83, 135)*/;
+  background-color: var(--background_color)/* rgb(112, 83, 135)*/;
   height: 100vh;
 }
+
 /*-----CABEÇA------*/
 
 
-.nav-link{
-  color: var(--text_one);
-}
-.nav-link:hover, .nav-link:active {
-    height: 35px;
-    color: var(--text_two) !important;
-    display: flex !important;             
-    justify-content: center ;      
-    align-items: center ;         
-    border: solid 2px var(--text_two);      
-  }
-.nav-link.active {
-  color: var(--text_two) !important;
-  border: solid 2px var(--text_two);
-  height: 35px;
-  display: flex !important;             
-  justify-content: center ;      
-  align-items: center ;    
-  border-top: none;
-  border-right: none;
-  border-left: none;
-}
-.navbar-nav{
-  background-color: #ffffff17;
-  border-bottom: solid 3px !important;
-  border-color: #790034 !important;
-  width: 40%;
-  
 
+/*navbar*/
+.navbar-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 13px;
+  left: 0;
+  width: 100%;
+  z-index: 2; 
+  background-color: rgba(0, 0, 0, 0);
 }
-.header-text{
-display: flex;
-justify-content: center;
-align-items: center;
-text-align: center;
+
+.navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.1); 
+  padding: 10px 0;
+  border-bottom: 3px solid #790034;
+  width: 50%; 
+  border-radius: 30px; 
 }
-.nickname{
-  width: 30%;
+
+.navbar-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  
+}
+
+.navbar-links {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+}
+
+.nav-link {
+  text-decoration: none;
   color: var(--text_one);
+  font-size: 16px;
+  padding: 5px 10px;
+  transition: all 0.1s ease-in-out;
+  text-align: center;
 }
+
+.nav-link:hover,
+.nav-link:focus {
+  color: var(--text_two);
+  border: 2px solid var(--text_two);
+  border-radius: 5px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-link.active {
+  color: var(--text_two);
+  border-bottom: 2px solid var(--text_two);
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 
 
 /*---------pricipal-------*/
 .main{
   display: flex;
   flex-direction: column;
+  
 }
 
 
@@ -71,6 +101,7 @@ text-align: center;
 .section-tinder{
   height: 600px;
   margin: 0;
+  margin-top: 50px;
   display: grid;
   grid-template-rows: 500px 100px;
   grid-template-columns: 1fr 30px 30px 30px 1fr;
@@ -197,7 +228,7 @@ input:nth-of-type(5):checked ~ main#carousel {
 
 /* Estilização das vagas */
 #section-vaga {
-  background-color: var(--second_color);
+  background-color: var(--background_color);
   padding: 40px;
 }
 
@@ -371,7 +402,7 @@ footer{
   width: 100%;
   height: 50px;
   border-radius: 0px 0px 30px 30px;
-  background-color: var(--second_color);
+  background-color: var(--background_color);
   box-shadow: 0px 10px 10px #0505186b;
 }
 
