--- a/css/chatbot.css
+++ b/css/chatbot.css
@@ -27,6 +27,30 @@ body {
     background: linear-gradient(var(--background_color_two) , var(--background_color));
 }
 
+/*scrollbar*/
+::-webkit-scrollbar{
+
+    height: 10px;
+    width: 5px;
+    
+    /*animation: background-bar 4s alternate infinite;*/
+}
+::-webkit-scrollbar-thumb{
+    background-color: var(--text_two);
+    
+}
+::-webkit-scrollbar-track{
+    background-color: var(--background_color);
+    height: 10px;
+    margin: 2px;
+}
+::-webkit-scrollbar-button{
+    background-color: var(--background_color);
+    height: 2px;
+}
+
+
+
 #chatbot-toggler {
     position: fixed;
     bottom: 30px;
@@ -41,6 +65,7 @@ body {
     border-radius: 50%;
     background: var(--main_one);
     transition: all 0.2s ease;
+    box-shadow: 1px 1px 10px black;
 }
 
 
@@ -72,6 +97,7 @@ body.show-chatbot #chatbot-toggler span:last-child {
     right: 35px;
     bottom: 90px;
     width: 420px;
+    height: 75%;
     background: #fff;
     overflow: hidden;
     border-radius: 15px;
@@ -82,6 +108,9 @@ body.show-chatbot #chatbot-toggler span:last-child {
     box-shadow: 0 0 128px 0 rgba(0, 0, 0, 0.1),
     0 32px 64px -48 rgba(0, 0, 0, 0.5);
     transition: all 0.2s ease;
+    z-index: 2;
+    
+
 }
 
 body.show-chatbot .chatbot-popup {
@@ -106,7 +135,7 @@ body.show-chatbot .chatbot-popup {
 }
 
 .header-info .chatbot-logo {
-    height: 50x;
+    height: 50px;
     width: 50px;
     flex-shrink: 0;
     border-radius: 50%;
