--- a/css/perfil.css
+++ b/css/perfil.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     color: var(--text_one);
+    
 }
 /*cores*/
 :root{
@@ -20,10 +21,30 @@
     --text_one:#ffffff;
     --text_two:#bdbdbd;
 }
-body{
-  background-color: var(--background_color);
+
+/*scrollbar*/
+::-webkit-scrollbar{
+
+  height: 10px;
+  width: 5px;
+  
+  /*animation: background-bar 4s alternate infinite;*/
+}
+::-webkit-scrollbar-thumb{
+  background-color: var(--text_two);
   
 }
+::-webkit-scrollbar-track{
+  background-color: var(--background_color);
+  height: 10px;
+  margin: 2px;
+}
+::-webkit-scrollbar-button{
+  background-color: var(--background_color);
+  height: 2px;
+}
+
+
 .section-2{
     margin-bottom: 50px;
     box-shadow: 2px 2px 20px black;
@@ -118,7 +139,6 @@ main{
     background-color: var(--background_color);
     justify-content: center;
     align-items: center;
-    margin-bottom: 10%;
     margin-top: 56px;
 }
 .div-main{
