--- a/css/termopolitica.css
+++ b/css/termopolitica.css
@@ -25,6 +25,30 @@ html {
     --text_two:#bdbdbd;
 }
 
+/*scrollbar*/
+::-webkit-scrollbar{
+
+    height: 10px;
+    width: 5px;
+    
+    /*animation: background-bar 4s alternate infinite;*/
+}
+::-webkit-scrollbar-thumb{
+    background-color: var(--text_two);
+    
+}
+::-webkit-scrollbar-track{
+    background-color: var(--background_color);
+    height: 10px;
+    margin: 2px;
+}
+::-webkit-scrollbar-button{
+    background-color: var(--background_color);
+    height: 2px;
+}
+
+
+
 /*botão de voltar*/
 .return{
     position: fixed;
