--- a/css/vagas.css
+++ b/css/vagas.css
@@ -14,6 +14,29 @@ body{
   height: 100vh;
 }
 
+/*scrollbar*/
+::-webkit-scrollbar{
+
+  height: 10px;
+  width: 5px;
+  
+  /*animation: background-bar 4s alternate infinite;*/
+}
+::-webkit-scrollbar-thumb{
+  background-color: var(--text_two);
+  
+}
+::-webkit-scrollbar-track{
+  background-color: var(--background_color);
+  height: 10px;
+  margin: 2px;
+}
+::-webkit-scrollbar-button{
+  background-color: var(--background_color);
+  height: 2px;
+}
+
+
 /*-----CABEÇA------*/
 
 
