--- a/css/login.css
+++ b/css/login.css
@@ -110,7 +110,8 @@ main {
     position: absolute;
     height: 100%;
     right: -10px;
-    animation: key_cursor .5s infinite, key_del 8s steps(15) 1 forwards;
+    animation: key_cursor .5s infinite,
+               key_del 8s steps(15) 1 forwards;
     width: calc(100% + 10px);
     background-color: var(--background_color);
 }
