--- a/css/perfil.css
+++ b/css/perfil.css
@@ -21,6 +21,9 @@
     --text_one:#ffffff;
     --text_two:#bdbdbd;
 }
+body{
+ background-color: var(--background_color); 
+}
 
 /*scrollbar*/
 ::-webkit-scrollbar{
@@ -136,10 +139,9 @@
 /*---------PRINCIPAL---------*/
 main{
     display: flex;
-    background-color: var(--background_color);
     justify-content: center;
     align-items: center;
-    margin-top: 56px;
+    margin-top: 3.8%;
 }
 .div-main{
     display: flex;
@@ -164,6 +166,7 @@ main{
     justify-content: center;
     align-items: end;
     border: #0d0d2b solid 2px;
+    box-shadow: 2px -10px 20px black;
 }
 
 .section-1 .img-radion {
@@ -186,7 +189,7 @@ main{
     width: 100%;
     background-color: var(--main_two);
     padding: 30px 0px 0px 0px;
-    border-radius: 10px;
+    border-radius: 0px 0px 10px 10px;
 }
 
 /* cima section 2*/
@@ -221,7 +224,7 @@ main{
 }
 
 .profile-text {
-    margin: 0px 10px 0px 10px;
+    margin: 30px 10px 40px 40px;
 }
 
 /*centro sectio2*/
@@ -239,10 +242,12 @@ main{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: solid 2px var(--text_one);
+    /* border: solid 2px var(--text_one); */
     border-radius: 20px;
     width: 90%;
-    
+    margin: 20px;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.493);
+  
 }
 .quests .quests-profire{
     display: flex;
@@ -678,14 +683,14 @@ footer{
   display: flex;
   flex-direction: column;
   /* height: 100%; */
-  background-color: var(--main_one);
+   background-color: var(--main_one); 
 }
 
 .footer-shadow{
   width: 100%;
   height: 50px;
   border-radius: 0px 0px 30px 30px;
-  background-color: var(--background_color);
+  background-color: var(--background_color); 
   box-shadow: 0px 10px 10px #0505186b;
 }
 
@@ -759,8 +764,6 @@ footer{
   display: flex;
   flex-direction: column;
   align-items: center;
-  
-
 }
 .icon-footer{
   width: 40px;
