--- a/css/perfil.css
+++ b/css/perfil.css
@@ -22,7 +22,10 @@
     --text_two:#bdbdbd;
 }
 body{
- background-color: var(--background_color); 
+  background-color: var(--background_color);
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 /*scrollbar*/
@@ -142,6 +145,7 @@ main{
     justify-content: center;
     align-items: center;
     margin-top: 3.8%;
+    flex: 1;
 }
 .div-main{
     display: flex;
@@ -677,6 +681,133 @@ main{
   height: 40px;
   z-index: 3;
 }
+
+.section-4{
+  background-color: #790034;
+  box-shadow: 2px 2px 20px black;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 10px;
+}
+
+/*#region CODIGO DE TINDER DE TERCEIROS*/
+
+.section-tinder{
+  height: 600px;
+  margin: 0;
+  margin-top: 50px;
+  display: grid;
+  grid-template-rows: 500px 100px;
+  grid-template-columns: 1fr 30px 30px 30px 1fr;
+  align-items: center;
+  justify-items: center;
+}
+
+main#carousel {
+  grid-row: 1 / 2;
+  grid-column: 1 / 8;
+  width: 100%;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  transform-style: preserve-3d;
+  /* perspective: 200px; */
+  --items: 1000;
+  --middle: 1;
+  --position: 1;
+  pointer-events: none; 
+  border-radius: 30px;
+  
+}
+div.item {
+  position: absolute;
+  width: 800px;
+  height: 400px;
+  box-shadow: 0px 0px 20px var(--background_color);
+  border-radius: 10px;
+  pointer-events: auto;
+  --r: calc(var(--position) - var(--offset));
+  --abs: max(calc(var(--r) * -1), var(--r));
+  transition: transform 0.25s ease-in-out; 
+  transform: rotateY(calc(-0.9deg * var(--r))) translateX(calc(-300px * var(--r) ));
+  z-index: calc((var(--position) - var(--abs)));
+  
+}
+div.item:nth-of-type(1) {
+  --offset: 1;
+  background-color: var(--main_one);
+
+}
+#section_vaga_recomendada_1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--text_one);
+  
+}
+
+ div.item:nth-of-type(2) {
+  --offset: 2;
+  background-color: var(--text_one);
+
+}
+div.item:nth-of-type(3) {
+  --offset: 3;
+  background-color: var(--text_one);
+}
+
+input[type="radio"]{
+  display: none;
+} 
+
+input:nth-of-type(1):checked ~ main#carousel {
+  --position: 1;
+}
+input:nth-of-type(2):checked ~ main#carousel {
+  --position: 2;
+}
+ input:nth-of-type(3):checked ~ main#carousel {
+  --position: 3;
+}
+
+input:nth-of-type(4):checked ~ main#carousel {
+  --position: 4;
+}
+
+input:nth-of-type(5):checked ~ main#carousel {
+  --position: 5;
+}
+
+
+.carousel-button{
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+  background-color: #790034;
+  width: 19em;
+  height: 50px;
+  border-radius: 10px;
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+}
+.carousel-button button{
+  border: none;
+  background-color: transparent;
+}
+
+.carousel-button button:hover{
+  transform: scale(1.1);
+}
+.carousel-button button:active{
+  transform: scale(0.9);
+
+}
+/*#endregion*/
+
 
 /*-----Footer bonitão igual o Gabriel henrique-----*/
 footer{
