--- a/css/vagas.css
+++ b/css/vagas.css
@@ -51,14 +51,15 @@ body{
   left: 0;
   width: 100%;
   z-index: 2; 
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(28, 14, 60, 0.035);
+  
 }
 
 .navbar {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(255, 255, 255, 0.1); 
+  background-color: rgba(0, 0, 0, 0.1); 
   padding: 10px 0;
   border-bottom: 3px solid #790034;
   width: 50%; 
@@ -100,7 +101,7 @@ body{
 }
 
 .nav-link.active {
-  color: var(--text_two);
+  color: var(--text_one);
   border-bottom: 2px solid var(--text_two);
   height: 35px;
   display: flex;
@@ -113,7 +114,7 @@ body{
 /*---------pricipal-------*/
 main{  
   flex: 1;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 .main{
   display: flex;
@@ -169,8 +170,6 @@ div.item {
   
 }
 
-
-
 div.item:nth-of-type(1) {
   --offset: 1;
   background-color: var(--main_one);
@@ -207,7 +206,6 @@ input:nth-of-type(2):checked ~ main#carousel {
  input:nth-of-type(3):checked ~ main#carousel {
   --position: 3;
 }
-
 input:nth-of-type(4):checked ~ main#carousel {
   --position: 4;
 }
@@ -227,6 +225,8 @@ input:nth-of-type(5):checked ~ main#carousel {
   border-radius: 10px;
   grid-column: 3 / 4;
   grid-row: 2 / 3;
+  padding-left: 1%;
+  padding-right: 1%;
 }
 .carousel-button button{
   border: none;
@@ -242,6 +242,14 @@ input:nth-of-type(5):checked ~ main#carousel {
 }
 /*#endregion*/
 
+
+.line-horizontal{
+  width: 80%;
+  height: 1px;
+  margin-left: 10%;
+  margin-right: 10%;
+  background-color: var(--main_one);
+}
 
 /*search bar*/
 .input-group ,.search-buttom{
