--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -3,7 +3,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+
+    font-family: "Roboto", serif;
+    font-weight: 800;
 }
 /*cores*/
 :root{
@@ -96,11 +98,17 @@ main {
 .section-left h1 {
     font-size: 2.5rem;
     text-align: center;
+    font-family: "Parkinsans", sans-serif;
+    font-weight: lighter;
+    font-weight: 200;
 }
 
 /*Animação de texto da esquerda*/
 .section-left h1 span{
     position: relative;
+    font-family: "Parkinsans", sans-serif;
+    font-weight: lighter;
+    font-weight: 200;
    
 }
 .section-left h1 span::before{
