--- a/css/login.css
+++ b/css/login.css
@@ -3,8 +3,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    
+    font-family: "Roboto", serif;
+    font-weight: 800;
 }
 /*cores*/
 :root{
@@ -93,11 +93,17 @@ main {
 .section-left h1 {
     font-size: 2.5rem;
     text-align: center;
+    font-family: "Parkinsans", sans-serif;
+    font-weight: lighter;
+    font-weight: 200;
 }
+
 /*Animação de texto da esquerda*/
 .section-left h1 span{
     position: relative;
-   
+    font-family: "Parkinsans", sans-serif;
+    font-weight: lighter;
+    font-weight: 200;
 }
 .section-left h1 span::before{
     content: "";
